--- a/css/anime.css
+++ b/css/anime.css
@@ -10,46 +10,59 @@
       0 0 102px #0fa,
       0 0 151px #0fa;
   }
+  html{
+    scroll-behavior: smooth;
+}
 
-  
+  header {
+    position: fixed; 
+    width: 100%; 
+    height: 60px; 
+    padding: 20px 60px; 
+    box-sizing: border-box;
+    background: #333;
+    top: 0; 
+    left: 0; 
+    display: flex; 
+    align-items: center; 
+    text-transform: uppercase;
+    display: flex; 
+    justify-content:space-between;
+}
+
+header .nav .menu {
+    display: flex; 
+}
+
+header .nav .menu li {
+    list-style: none; 
+    margin-left: 40px;
+}
+
+header .nav .menu li a{
+   color: #0fa;
+   font-weight:bold;
+   text-decoration: none;
+}
+
 body {
-  background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");  
+  background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png"); 
+  background-color: black; 
   background-size: contain;
-  
-  font-size: 18px;
   font-family: "Helvetica Neue", sans-serif;
-
 }  
 
-h1, h2 {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 0.3em;
-
-}
-  
-h1 {
-    font-size: 4.2rem;
-}
-
 .pulsate {
-    
     animation: pulsate 1.5s infinite alternate;     
 }
   
-h2 {
-    font-size: 1.8rem;
-}
 
 .container {
   margin-top: 20vh;
 }
 
 @keyframes pulsate {
-    
   100% {
-
       text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
@@ -84,12 +97,13 @@ h2:nth-child(2){
     padding: 0;
     box-sizing: border-box;
 }
-.loopSlide {
+/*.loopSlide {
   position: relative;
   display: flex;
   width: 100vw;
   overflow: hidden;
-
+*/
+.book{
   ul {
       padding: 0;
       display: flex;
@@ -114,20 +128,20 @@ h2:nth-child(2){
               display: block;
               width: 500px;
               height: 700px;
-              object-fit: contain;
+              object-fit: cover;
               border: 1px solid #ddd;
           }
       }
   }
-  
-  &:hover {
+}
+  /*&:hover {
       ul {
           animation-play-state: paused;
       }
   }
-}
+}*/
 
-@keyframes slide1 {
+/*@keyframes slide1 {
   0% {
       transform: translateX(100%);
   }
@@ -151,18 +165,20 @@ h2:nth-child(2){
   display: flex;
   width: 100vw;
   overflow: hidden;
-
+*/
+.anime{
+    
   ul {
       padding: 0;
       display: flex;
       flex-shrink: 0;
 
-      &:first-child {
+     /* &:first-child {
           animation: slide1 50s -30s linear infinite;
       }
       &:last-child {
           animation: slide2 50s linear infinite;
-      }
+      }*/
 
       li {
           display: inline-block;
@@ -181,13 +197,13 @@ h2:nth-child(2){
           }
       }
   }
-  
-  &:hover {
+}
+ /* &:hover {
       ul {
           animation-play-state: paused;
       }
   }
-}
+}*/
 @media screen and (max-width: 768px) {
     body {
         font-size: 16px;
