--- a/css/home.css
+++ b/css/home.css
@@ -10,11 +10,14 @@
       0 0 102px #0fa,
       0 0 151px #0fa;
   }
-
+  
+html {
+    scroll-behavior: smooth;
+}
   
 body {
     text-align: center;
-      background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");  
+      background-image:("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png"); 
       background-size: cover;
   font-size: 18px;
   font-family: "Helvetica Neue", sans-serif;
@@ -83,6 +86,7 @@ h2 {
 }
 body{
     background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
