--- a/css/me.css
+++ b/css/me.css
@@ -10,13 +10,45 @@
       0 0 102px #0fa,
       0 0 151px #0fa;
   }
+html{
+    scroll-behavior: smooth;
+}
+header {
+  position: fixed; 
+  width: 100%; 
+  height: 60px; 
+  padding: 20px 60px; 
+  box-sizing: border-box;
+  background: #333;
+  top: 0; 
+  left: 0; 
+  display: flex; 
+  align-items: center; 
+  text-transform: uppercase;
+  display: flex; 
+  justify-content:space-between;
+}
 
-  
+header .nav .menu {
+  display: flex; 
+}
+
+header .nav .menu li {
+  list-style: none; 
+  margin-left: 40px;
+}
+
+header .nav .menu li a{
+ color: #0fa;
+ font-weight:bold;
+ text-decoration: none;
+}
 body {
-      background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");  
+  background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");  
   font-size: 18px;
   font-family: "Helvetica Neue", sans-serif;
   background-size: cover;
+  background-color: black;
 }  
 
 h1, h2 {
@@ -45,9 +77,7 @@ h2 {
 }
 
 @keyframes pulsate {
-    
   100% {
-
       text-shadow:
       0 0 4px #fff,
       0 0 11px #fff,
@@ -83,9 +113,8 @@ h2 {
   body {
       font-size: 16px;
   }
-  
   h1 {
-      font-size: 3.2rem;
+      font-size: 40px;
   }
   
   h2 {
