--- a/css/test.css
+++ b/css/test.css
@@ -10,16 +10,17 @@
       0 0 102px #0fa,
       0 0 151px #0fa;
   }
-html{
+html {
     scroll-behavior: smooth;
 }
-  
 body {
-      background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");  
+  background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png"); 
+  background-color: black; 
+  background-size: contain;
+  
   font-size: 18px;
   font-family: "Helvetica Neue", sans-serif;
-  background-size: cover;
-  background-color: black;
+
 }  
 
 h1, h2 {
@@ -36,7 +37,7 @@ h1 {
 
 .pulsate {
     
-     animation: pulsate 1.5s infinite alternate;     
+    animation: pulsate 1.5s infinite alternate;     
 }
   
 h2 {
@@ -76,26 +77,30 @@ h2 {
     0 0 80px #0fa;
   }
 }
+h2:nth-child(2){
+  filter: hue-rotate(250deg);
+}
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+  
 @media screen and (max-width: 768px) {
-  body {
-      font-size: 16px;
-  }
-  
-  h1 {
-      font-size: 3.2rem;
-  }
-  
-  h2 {
-      font-size: 1.4rem;
-  }
-  
-  .container {
-      margin-top: 10vh;
-  }
+    body {
+        font-size: 16px;
+    }
+    
+    h1 {
+        font-size: 3.2rem;
+    }
+    
+    h2 {
+        font-size: 1.4rem;
+    }
+    
+    .container {
+        margin-top: 10vh;
+    }
 }
