--- a/css/anime.css
+++ b/css/anime.css
@@ -1,3 +1,56 @@
+/* 全体設定 */
+body {
+    background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
+    background-color: black;
+    background-size: cover;
+    font-family: "Helvetica Neue", sans-serif;
+    color: white;
+    text-align: center;
+    margin-top: 80px;
+}
+
+/* header設定 */
+header {
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    padding: 20px 60px;
+    box-sizing: border-box;
+    background: #333;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-transform: uppercase;
+    z-index: 1000;
+}
+
+/* メニューの設定 */
+header .nav .menu {
+    display: flex;
+}
+
+header .nav .menu li {
+    list-style: none;
+    margin-left: 40px;
+}
+
+header .nav .menu li a {
+    color: #0fa;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/* h1とh2の設定 */
+h1, h2 {
+    font-size: 3.2rem;
+}
+
+h2 {
+    margin: 20px 0;
+}
+
 .neonText {
     color: #fff;
     text-shadow:
@@ -9,216 +62,150 @@
       0 0 92px #0fa,
       0 0 102px #0fa,
       0 0 151px #0fa;
-  }
-
-html{
-    scroll-behavior: smooth;
 }
-
-  header {
-    position: fixed; 
-    width: 100%; 
-    height: 60px; 
-    padding: 20px 60px; 
-    box-sizing: border-box;
-    background: #333;
-    top: 0; 
-    left: 0; 
-    display: flex; 
-    align-items: center; 
-    text-transform: uppercase;
-    display: flex; 
-    justify-content:space-between;
-}
-
-header .nav .menu {
-    display: flex; 
-}
-
-header .nav .menu li {
-    list-style: none; 
-    margin-left: 40px;
-}
-
-header .nav .menu li a{
-   color: #0fa;
-   font-weight:bold;
-   text-decoration: none;
-}
-
-body {
-  background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png"); 
-  background-color: black; 
-  background-size: contain;
-  font-family: "Helvetica Neue", sans-serif;
-}  
 
 .pulsate {
-    animation: pulsate 1.5s infinite alternate;     
-}
-  
-
-.container {
-  margin-top: 20vh;
+    animation: pulsate 1.5s infinite alternate;
 }
 
 @keyframes pulsate {
-  100% {
-      text-shadow:
-      0 0 4px #fff,
-      0 0 11px #fff,
-      0 0 19px #fff,
-      0 0 40px #0fa,
-      0 0 80px #0fa,
-      0 0 90px #0fa,
-      0 0 100px #0fa,
-      0 0 150px #0fa;
-  
-  }
-  
-  0% {
+    0% {
+        text-shadow:
+          0 0 2px #fff,
+          0 0 4px #fff,
+          0 0 6px #fff,
+          0 0 10px #0fa,
+          0 0 45px #0fa,
+          0 0 55px #0fa,
+          0 0 70px #0fa,
+          0 0 80px #0fa;
+    }
+    100% {
+        text-shadow:
+          0 0 4px #fff,
+          0 0 11px #fff,
+          0 0 19px #fff,
+          0 0 40px #0fa,
+          0 0 80px #0fa,
+          0 0 90px #0fa,
+          0 0 100px #0fa,
+          0 0 150px #0fa;
+    }
+}
 
-    text-shadow:
-    0 0 2px #fff,
-    0 0 4px #fff,
-    0 0 6px #fff,
-    0 0 10px #0fa,
-    0 0 45px #0fa,
-    0 0 55px #0fa,
-    0 0 70px #0fa,
-    0 0 80px #0fa;
-  }
+/* bookとanimeの設定 */
+.book, .anime {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-h2:nth-child(2){
-  filter: hue-rotate(250deg);
-}
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-*{
-    margin: 0;
+
+.book ul, .anime ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
     padding: 0;
-    box-sizing: border-box;
-}
-/*.loopSlide {
-  position: relative;
-  display: flex;
-  width: 100vw;
-  overflow: hidden;
-*/
-.book{
-  ul {
-      padding: 0;
-      display: flex;
-      flex-shrink: 0;
-
-      &:first-child {
-          animation: slide1 50s -30s linear infinite;
-      }
-      &:last-child {
-          animation: slide2 50s linear infinite;
-      }
-
-      li {
-          display: inline-block;
-          width: 100%;
-          min-width: 500px;
-          margin-right: 20px;
-          list-style: none;
-          text-align: center;
-          
-          img {
-              display: block;
-              width: 500px;
-              height: 700px;
-              object-fit: cover;
-              border: 1px solid #ddd;
-          }
-      }
-  }
-}
-  /*&:hover {
-      ul {
-          animation-play-state: paused;
-      }
-  }
-}*/
-
-/*@keyframes slide1 {
-  0% {
-      transform: translateX(100%);
-  }
-
-  to {
-      transform: translateX(-100%);
-  }
+    justify-content: center; /* ここでセンタリングを追加 */
 }
 
-@keyframes slide2 {
-  0% {
-      transform: translateX(0);
-  }
-
-  to {
-      transform: translateX(-200%);
-  }
+.book ul li, .anime ul li {
+    margin: 10px;
 }
-.loopSlide2 {
-  position: relative;
-  display: flex;
-  width: 100vw;
-  overflow: hidden;
-*/
-.anime{
-    
-  ul {
-      padding: 0;
-      display: flex;
-      flex-shrink: 0;
 
-     /* &:first-child {
-          animation: slide1 50s -30s linear infinite;
-      }
-      &:last-child {
-          animation: slide2 50s linear infinite;
-      }*/
-
-      li {
-          display: inline-block;
-          width: 100%;
-          min-width: 500px;
-          margin-right: 20px;
-          list-style: none;
-          text-align: center;
-          
-          img {
-              display: block;
-              width: 800px;
-              height: 450px;
-              object-fit: contain;
-              border: 1px solid #ddd;
-          }
-      }
-  }
+.book ul li img, .anime ul li img {
+    border-radius: 10px;
+    object-fit: contain;
 }
- /* &:hover {
-      ul {
-          animation-play-state: paused;
-      }
-  }
-}*/
+
+/* bookの画像設定 */
+.book ul li img {
+    width: 500px;
+    height: 600px;
+}
+
+/* animeの画像設定 */
+.anime ul li img {
+    width: 600px;
+    height: 500px;
+}
+
+/* footerの設定 */
+footer {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+}
+
+.btn-backtotop a {
+    color: #0fa;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+/* レスポンシブ対応 */
 @media screen and (max-width: 768px) {
     body {
         font-size: 16px;
     }
     
     h1 {
-        font-size: 3.2rem;
+        font-size: 2.4rem;
     }
-    
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    header {
+        padding: 20px 30px;
+    }
+
+    header .nav .menu li {
+        margin-left: 20px;
+    }
+
+    .book ul li img {
+        width: 150px;
+        height: 225px;
+    }
+
+    .anime ul li img {
+        width: 225px;
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    h1 {
+        font-size: 1.8rem;
+    }
+
     h2 {
         font-size: 1.4rem;
     }
-    
-    .container {
-        margin-top: 10vh;
+
+    header {
+        padding: 20px 15px;
+    }
+
+    header .nav .menu {
+        flex-direction: column;
+    }
+
+    header .nav .menu li {
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
+
+    .book ul li img {
+        width: 150px;
+        height: 225px;
+    }
+
+    .anime ul li img {
+        width: 225px;
+        height: 150px;
     }
 }
