--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
+#splash {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#splash_text {
+    color: #fff;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#progress_bar {
+    width: 80%;
+    height: 10px;
+    background: #bbb;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.loader_cover-up, .loader_cover-down {
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    background: #000;
+    z-index: 9998;
+}
+
+.loader_cover-up {
+    top: 0;
+    left: 0;
+    transform: translateY(-100%);
+    transition: transform 1s ease;
+}
+
+.loader_cover-down {
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    transition: transform 1s ease;
+}
+
+.coveranime {
+    transform: translateY(0);
+}
+
+
+/* Additional CSS for the rest of the page */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .neonText {
     color: #fff;
     text-shadow:
@@ -9,82 +75,70 @@
       0 0 92px #0fa,
       0 0 102px #0fa,
       0 0 151px #0fa;
-  }
-  
+}
+
 html {
     scroll-behavior: smooth;
 }
-  
+
 body {
     text-align: center;
-      background-image:("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png"); 
-      background-size: cover;
-  font-size: 18px;
-  font-family: "Helvetica Neue", sans-serif;
-  text-align: center;
+    background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
+    background-size: cover;
+    font-size: 18px;
+    font-family: "Helvetica Neue", sans-serif;
+    text-align: center;
 }  
 
 h1, h2 {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 0.3em;
-
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 0.3em;
 }
-  
+
 h1 {
     font-size: 4.2rem;
 }
 
 .pulsate {
-    
-     animation: pulsate 1.5s infinite alternate;     
+    animation: pulsate 1.5s infinite alternate;     
 }
-  
+
 h2 {
     font-size: 1.8rem;
 }
 
 .container {
-  margin-top: 20vh;
+    margin-top: 20vh;
 }
 
 @keyframes pulsate {
-    
-  100% {
-
-      text-shadow:
-      0 0 4px #fff,
-      0 0 11px #fff,
-      0 0 19px #fff,
-      0 0 40px #0fa,
-      0 0 80px #0fa,
-      0 0 90px #0fa,
-      0 0 100px #0fa,
-      0 0 150px #0fa;
-  
-  }
-  
-  0% {
-
-    text-shadow:
-    0 0 2px #fff,
-    0 0 4px #fff,
-    0 0 6px #fff,
-    0 0 10px #0fa,
-    0 0 45px #0fa,
-    0 0 55px #0fa,
-    0 0 70px #0fa,
-    0 0 80px #0fa;
-  }
+    100% {
+        text-shadow:
+        0 0 4px #fff,
+        0 0 11px #fff,
+        0 0 19px #fff,
+        0 0 40px #0fa,
+        0 0 80px #0fa,
+        0 0 90px #0fa,
+        0 0 100px #0fa,
+        0 0 150px #0fa;
+    }
+    0% {
+        text-shadow:
+        0 0 2px #fff,
+        0 0 4px #fff,
+        0 0 6px #fff,
+        0 0 10px #0fa,
+        0 0 45px #0fa,
+        0 0 55px #0fa,
+        0 0 70px #0fa,
+        0 0 80px #0fa;
+    }
 }
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
+
+body {
     background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
     background-color: black;
     display: flex;
@@ -94,7 +148,8 @@ body{
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
-a{
+
+a {
     position: relative;
     display: inline-block;
     padding: 25px 30px;
@@ -106,116 +161,127 @@ a{
     letter-spacing: 4px;
     overflow: hidden;
     margin-right: 50px;
-   
 }
-a:hover{
+
+a:hover {
     background: #03e9f4;
     color: #050801;
     box-shadow: 0 0 5px #03e9f4,
                 0 0 25px #03e9f4,
                 0 0 50px #03e9f4,
                 0 0 200px #03e9f4;
-     -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 }
-a:nth-child(1){
+
+a:nth-child(1) {
     filter: hue-rotate(270deg);
 }
-a:nth-child(2){
+
+a:nth-child(2) {
     filter: hue-rotate(110deg);
 }
-a:nth-child(3){
+
+a:nth-child(3) {
     filter: hue-rotate(250deg);
 }
-a:nth-child(4){
+
+a:nth-child(4) {
     filter: hue-rotate(210deg);
 }
 
-a span{
+a span {
     position: absolute;
     display: block;
 }
-a span:nth-child(1){
+
+a span:nth-child(1) {
     top: 0;
     left: 0;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg,transparent,#03e9f4);
+    background: linear-gradient(90deg, transparent, #03e9f4);
     animation: animate1 1s linear infinite;
 }
-@keyframes animate1{
-    0%{
+
+@keyframes animate1 {
+    0% {
         left: -100%;
     }
-    50%,100%{
+    50%, 100% {
         left: 100%;
     }
 }
-a span:nth-child(2){
+
+a span:nth-child(2) {
     top: -100%;
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg,transparent,#03e9f4);
+    background: linear-gradient(180deg, transparent, #03e9f4);
     animation: animate2 1s linear infinite;
     animation-delay: 0.25s;
 }
-@keyframes animate2{
-    0%{
+
+@keyframes animate2 {
+    0% {
         top: -100%;
     }
-    50%,100%{
+    50%, 100% {
         top: 100%;
     }
 }
-a span:nth-child(3){
+
+a span:nth-child(3) {
     bottom: 0;
     right: 0;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg,transparent,#03e9f4);
+    background: linear-gradient(270deg, transparent, #03e9f4);
     animation: animate3 1s linear infinite;
     animation-delay: 0.50s;
 }
-@keyframes animate3{
-    0%{
+
+@keyframes animate3 {
+    0% {
         right: -100%;
     }
-    50%,100%{
+    50%, 100% {
         right: 100%;
     }
 }
 
-
-a span:nth-child(4){
+a span:nth-child(4) {
     bottom: -100%;
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg,transparent,#03e9f4);
+    background: linear-gradient(360deg, transparent, #03e9f4);
     animation: animate4 1s linear infinite;
     animation-delay: 0.75s;
 }
-@keyframes animate4{
-    0%{
+
+@keyframes animate4 {
+    0% {
         bottom: -100%;
     }
-    50%,100%{
+    50%, 100% {
         bottom: 100%;
     }
 }
+
 @media screen and (max-width: 768px) {
     body {
         font-size: 16px;
     }
-    
+
     h1 {
         font-size: 3.2rem;
     }
-    
+
     h2 {
         font-size: 1.4rem;
     }
-    
+
     .container {
         margin-top: 10vh;
     }
