--- a/css/book.css
+++ b/css/book.css
@@ -269,6 +269,7 @@ header {
         transform: translateX(100%); /* Initially hidden */
         transition: transform 0.3s ease-in-out;
         padding: 20px; /* Added padding for better spacing */
+        text-decoration:none;
     }
 
     header .nav .menu li {
