--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ h1, h2 {
     text-transform: uppercase;
     font-weight: 400;
     letter-spacing: 0.3em;
+    font-family:"Helvetica Neue", sans-serif;
 }
 
 h1 {
